fixed router jump

--- a/web/apps/host/src/app/base/base.component.scss
+++ b/web/apps/host/src/app/base/base.component.scss
@@ -38,7 +38,7 @@ $phoneMenuButtonHeight: 60px;
         align-items: center;
         min-width: min-content;
         @include not-phone {
-          min-height: calc(100% - $safeScrollbarWidth);
+          min-height: calc(100vh - $safeScrollbarWidth);
           max-width: calc(100vw - $menuWidth - $safeScrollbarWidth);
         }
         @include phone {
